# Utils

./: CMakeLists.txt
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  test
build-linux-old/: CMakeCache.txt  Makefile  cmake_install.cmake  test
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/modules/: MacroOutOfSourceBuild.cmake
include/: utils.h
src/: test.cpp  utils.cpp
